--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
-* { -webkit-tap-highlight-color: transparent; }
+* {
+  -webkit-tap-highlight-color: transparent;
+  box-sizing: border-box;
+}
 
 body {
   font-family: system-ui, -apple-system;
@@ -17,10 +20,15 @@ body {
   outline: none;
   border-color: #ec4899;
   background: #fff;
+  box-shadow: 0 10px 25px rgba(236,72,153,.15);
+}
+
+button {
+  cursor: pointer;
 }
 
 button:active {
-  transform: scale(0.96);
+  transform: scale(0.97);
 }
 
 img, video {
